--- a/my-book/_config.yml
+++ b/my-book/_config.yml
@@ -3,7 +3,7 @@
 
 title: ML Extra Material
 author: Julián D. Arias-Londoño
-logo: logo.png
+logo: ml_logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
