--- a/my-book/_toc.yml
+++ b/my-book/_toc.yml
@@ -7,3 +7,4 @@ chapters:
 - file: content/BO_description
 - file: content/BO_Intro
 - file: content/BO_hyperparameter
+- file: content/Latent_space_optimization
